version 0.8.1 - XX-MMM-2009
 . BitmapFontAtlas: .png image can be in subfolders (issue #464)
 . ParticleView: integrated Particle visual editor (issue #480)
 . TextureMgr: Async reuses EAGL context (issue #472)
 . TiledMap: Added support for the TMX format: iso, ortho and hex maps (issue #462)
 . TouchDispatcher: don't dispatch empty touches (issue #468)

version 0.8 - 27-Jul-2009
 . Action: Speed#stop calls other's stop (issue #460)
 . BitmapFontAtlas: opacity and color work as expected (issue #463)
 . CocosNode: setRelativeAnchorPoint error (issue #461)
 . Director: convertCoordinate roundoff error (issue #453)
 
version 0.8-rc2 - 21-Jul-2009
 . Actions: Repeat repeats OK (issue #424)
 . Actions: Prevents division by 0 when duration==0 (issue #452)
 . ActionManager: 5% increase in performance (issue #451)
 . CocosDenshion: fixed clicking on looped waves sounds (issue #440)
 . CocosDenshion: Added properties in SimpleSondEngine (issue #454)
 . CocosLive: using the deprecated CString API (issue #441)
 . CocosLive: send-score object can be reused (issue #417)
 . CocosNode: children is an explicit "property" (issue #411)
 . CocosNode: relativeTransformAnchor -> relativeAnchorPoint (part of issue #303)
 . ColorLayer: uses floats instead of ints for its size (issue #339)
 . ColorLayer: updates contentSize when when size is used (issue #443)
 . Demos: added basic template to start new projects (issue #447)
 . Director: FastDirector with fast events or not at compile time (issue #449)
 . FileUtils: Absolute paths are not converted (issue #352)
 . Menu: MenuItems works with anchorPoint correctly (issue #412)
 . Menu: ItemLabel disabled color is configurable. color is saved (issue #366)
 . Particle: VBO update only the needed particles (issue #367)
 . TextureMgr: new (and recommended) way to add CGImages (issue #349)
 . TouchDispatcher: retains/releases the delegates (issue #422)
 . Transitions: Fixed artifacts in Slide transitions (issue #442)
 