@@ -60,6 +60,7 @@ Poeple/companies who were/are contributing code to cocos2d for iPhone (alphabeti
 	* Graham Perks: Atlas works with GL_CULL_FACE
 		FastDirector doesn't leak autorelease pool patch
 	* Mark Cooke: Added TintTo action
+	* Matthias Hoechsmann: author of tools/mkatlas.pl script
 	* Hans Larsen: Possibility to create empty menus
 	* Ishaq Malik: patches for CocosNode
 	* Joao Caxaria: author of SimpleAudioEngine
@@ -72,6 +73,7 @@ Poeple/companies who were/are contributing code to cocos2d for iPhone (alphabeti
 		added WorldSpace coordinates to ParticleSystem
 	* Jason Cecil: Fixed memory leak in Director#FPSLabel
 		patches for CocosDenshion
+		CocosNode: parent set to nil after onExit patch
 	* Joe Vennix: patches for CocosNode
 	* jkrippy: patch for menu align. takes scale into account
 	* kasatani: AtlasSprite index 0 is not overwritten
